--- a/app/src/main/res/layout/fragment_travel_item_detail.xml
+++ b/app/src/main/res/layout/fragment_travel_item_detail.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TravelItemDetailFragment">
+    tools:context=".TravelItemDetailFragment"
+    tools:layout_editor_absoluteY="25dp">
 
     <!-- TODO: Update blank fragment layout -->
 
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -21,9 +22,20 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/Td_cardView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp">
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
+            app:cardBackgroundColor="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -36,26 +48,29 @@
                     android:layout_height="36dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
+                    android:layout_marginBottom="44dp"
                     android:text="@string/textview"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="24sp"
                     android:textStyle="bold"
+                    app:fontFamily="@font/carrois_gothic_sc"
+                    app:layout_constraintBottom_toTopOf="@+id/Td_RatingBar"
                     tools:ignore="MissingConstraints,RtlCompat"
-                    tools:layout_editor_absoluteX="197dp"
-                    tools:layout_editor_absoluteY="44dp" />
+                    tools:layout_editor_absoluteX="197dp" />
 
                 <TextView
                     android:id="@+id/Td_rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_above="@+id/stayImage"
+                    android:layout_marginBottom="40dp"
                     android:layout_toStartOf="@+id/stayRatingBar"
                     android:layout_toLeftOf="@+id/stayRatingBar"
                     android:text="@string/textview"
                     android:textSize="24sp"
+                    app:layout_constraintBottom_toTopOf="@+id/Td_place"
                     tools:ignore="MissingConstraints"
-                    tools:layout_editor_absoluteX="197dp"
-                    tools:layout_editor_absoluteY="125dp" />
+                    tools:layout_editor_absoluteX="197dp" />
 
                 <RatingBar
                     android:id="@+id/Td_RatingBar"
@@ -65,7 +80,7 @@
                     android:layout_alignRight="@+id/stayName"
                     android:numStars="1"
                     tools:ignore="MissingConstraints"
-                    tools:layout_editor_absoluteX="316dp"
+                    tools:layout_editor_absoluteX="304dp"
                     tools:layout_editor_absoluteY="115dp" />
 
                 <ImageView
@@ -73,10 +88,12 @@
                     android:layout_width="152dp"
                     android:layout_height="171dp"
                     android:layout_below="@+id/stayName"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
                     android:contentDescription="@string/todo"
-                    app:srcCompat="@color/colorPrimary"
+                    app:layout_constraintEnd_toStartOf="@+id/Td_Host"
+                    app:srcCompat="@color/colorBottomNavigationNotification"
                     tools:ignore="MissingConstraints"
-                    tools:layout_editor_absoluteX="26dp"
                     tools:layout_editor_absoluteY="16dp" />
 
                 <TextView
@@ -84,12 +101,13 @@
                     android:layout_width="262dp"
                     android:layout_height="32dp"
                     android:layout_margin="5dp"
+                    android:layout_marginBottom="20dp"
                     android:text="@string/textview"
                     android:textSize="24sp"
                     android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@+id/Td_details"
                     tools:ignore="MissingConstraints"
-                    tools:layout_editor_absoluteX="26dp"
-                    tools:layout_editor_absoluteY="204dp" />
+                    tools:layout_editor_absoluteX="26dp" />
 
                 <TextView
                     android:id="@+id/Td_details"
@@ -100,8 +118,8 @@
                     android:textSize="18sp"
                     android:textStyle="bold"
                     tools:ignore="MissingConstraints"
-                    tools:layout_editor_absoluteX="26dp"
-                    tools:layout_editor_absoluteY="247dp" />
+                    tools:layout_editor_absoluteX="23dp"
+                    tools:layout_editor_absoluteY="242dp" />
 
                 <ImageButton
                     android:id="@+id/Td_button_interested"
@@ -110,10 +128,13 @@
                     android:layout_alignBottom="@+id/travel_button_willjoin"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
+                    android:layout_marginEnd="72dp"
+                    android:layout_marginRight="72dp"
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toTopOf="@+id/Td_textView1"
+                    app:layout_constraintEnd_toStartOf="@+id/Td_button_willjoin"
                     app:srcCompat="@drawable/outline_account_box_black_48dp"
-                    tools:ignore="MissingConstraints"
-                    tools:layout_editor_absoluteX="81dp"
-                    tools:layout_editor_absoluteY="410dp" />
+                    tools:ignore="MissingConstraints" />
 
                 <ImageButton
                     android:id="@+id/Td_button_willjoin"
@@ -122,12 +143,13 @@
                     android:layout_below="@+id/travel_details"
                     android:layout_alignStart="@+id/travel_place"
                     android:layout_alignLeft="@+id/travel_place"
+                    android:layout_marginBottom="16dp"
                     android:layout_toStartOf="@+id/travel_goingno"
                     android:layout_toLeftOf="@+id/travel_goingno"
+                    app:layout_constraintBottom_toTopOf="@+id/Td_textView2"
                     app:srcCompat="@drawable/ic_home_black_24dp"
                     tools:ignore="MissingConstraints"
-                    tools:layout_editor_absoluteX="218dp"
-                    tools:layout_editor_absoluteY="410dp" />
+                    tools:layout_editor_absoluteX="218dp" />
 
                 <TextView
                     android:id="@+id/Td_textView1"
@@ -151,23 +173,29 @@
                     android:id="@+id/Td_going"
                     android:layout_width="58dp"
                     android:layout_height="40dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
                     android:text="111"
                     android:textSize="24sp"
+                    app:layout_constraintEnd_toStartOf="@+id/Td_textView3"
+                    app:layout_constraintStart_toStartOf="@+id/Td_details"
                     tools:ignore="MissingConstraints"
-                    tools:layout_editor_absoluteX="26dp"
                     tools:layout_editor_absoluteY="332dp" />
 
                 <TextView
                     android:id="@+id/Td_textView3"
                     android:layout_width="125dp"
                     android:layout_height="22dp"
+                    android:layout_marginBottom="44dp"
                     android:text="Already Going"
+                    app:layout_constraintBottom_toTopOf="@+id/Td_button_interested"
                     tools:ignore="MissingConstraints"
-                    tools:layout_editor_absoluteX="93dp"
-                    tools:layout_editor_absoluteY="341dp" />
+                    tools:layout_editor_absoluteX="93dp" />
 
             </android.support.constraint.ConstraintLayout>
 
         </android.support.v7.widget.CardView>
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
