--- a/app/src/main/res/layout/fragment_find_travel.xml
+++ b/app/src/main/res/layout/fragment_find_travel.xml
@@ -63,7 +63,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/travel_list"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
